--- a/strings/BUILD
+++ b/strings/BUILD
@@ -6,3 +6,12 @@ cc_binary(
   copts = [],
   deps = [],
 )
+
+
+cc_binary(
+  name = "multi-hash_test",
+  srcs = [
+    "multi-hash_test.cc",
+    "multi-hash.hpp",
+  ]
+)
