--- a/leetcode/BUILD
+++ b/leetcode/BUILD
@@ -2,5 +2,5 @@ cc_binary(
   name = "leetcode-main",
   srcs = [
     "leetcode-main.cc",
-  ] + glob(["inc/*.hpp", "inc/*.h"]),
+  ] + glob(["inc/*.hpp", "inc/*.h", "helper/*.h"]),
 )
